--- a/source/styles/blocks/burger-button.scss
+++ b/source/styles/blocks/burger-button.scss
@@ -1,5 +1,5 @@
 .burger-button {
-  padding: 0 0 0 21px;
+  padding: 0;
   position: relative;
   width: 16px;
   height: 12px;
@@ -18,7 +18,7 @@
     height: 1.5px;
     right: 0;
     background: $default-black;
-    transform: translateY(-8px);
+    transform: translateY(-7px);
     box-shadow: 0 6px $default-black;
   }
 
@@ -29,7 +29,7 @@
     height: 1.5px;
     right: 0;
     background: $default-black;
-    transform: translateY(4px);
+    transform: translateY(5px);
   }
 }
 
