--- a/source/styles/blocks/nav.scss
+++ b/source/styles/blocks/nav.scss
@@ -73,7 +73,7 @@
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: uppercase;
-  padding: 20px 21px;
+  // padding: 20px 21px;
   border-bottom: 1px solid #F0EBFF;
 
   &--user {
@@ -89,6 +89,7 @@
 }
 
 @media (min-width: $tablet-width) {
+
   .nav__item,
   .nav__item:last-child {
     border: none;
@@ -100,7 +101,55 @@
   color: inherit;
   display: flex;
   gap: 9px;
+  padding: 22px 22px;
+
+  &:hover {
+    color: $basic-violet;
+  }
+  &:focus {
+    color: $basic-violet;
+    outline: none;
+  }
+
+  &:active {
+    color: $basic-violet;
+    background-color: $basic-violet-ligth;
+  }
+
+  &--current {
+    color: $basic-violet;
+    border-bottom: 2px solid $basic-violet;
+  }
 }
+
+@media (min-width: $tablet-width) {
+  .nav__link {padding: 32px 20px;}
+}
+
+
+
+.nav__link-icon {
+  fill: $dark-color;
+  transition: fill 0.3s ease-in-out;
+}
+
+
+@media (min-width: $desktop-width) {
+  .nav__link:hover .nav__link-icon,
+  .nav__link:focus .nav__link-icon {
+    fill: $basic-violet-hover;
+  }
+
+  .nav__link:active .nav__link-icon {
+    fill: $basic-violet;
+  }
+}
+
+
+
+
+
+
 
 .nav__link-text {
   display: none;
@@ -123,9 +172,13 @@
 }
 
 .nav__item--botton {
-  width: 40px;
-  padding-right: 0;
+  width: 60px;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: center;
+  margin-right: -20px;
+}
+
+.nav__item--botton:active {
+  background-color: $basic-violet-ligth;
 }
