--- a/source/styles/blocks/price-filter.scss
+++ b/source/styles/blocks/price-filter.scss
@@ -16,6 +16,12 @@
   width: 280px;
 }
 
+@media (min-width: $tablet-width) {
+  .price-filter__inputs {
+    width: 100%;
+  }
+}
+
 .price-filter__input {
   font-family: inherit;
   font-size: 16px;
@@ -27,7 +33,7 @@
   padding: 8px 10px 8px 10px;
   border: 2px solid $basic-violet;
   border-radius: 4px;
-
+outline: none;
 }
 
 @media (min-width: $tablet-width) {
