--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -4,14 +4,14 @@
 
 .footer__container {
   width: 320px;
-  padding: 22px 20px 30px;
+  padding: 19px 20px 30px;
   margin: 0 auto;
 }
 
 @media (min-width: $tablet-width) {
   .footer__container {
     width: $tablet-width;
-    padding: 42px 30px 40px 20px;
+    padding: 40px 30px 40px 20px;
   }
 }
 
@@ -19,6 +19,7 @@
   .footer__container {
     width: $desktop-width;
     padding: 40px;
+    padding-top: 37.5px;
     display: grid;
     grid-template-areas:
       "header list"
@@ -31,16 +32,23 @@
 .footer__header {
   grid-area: header;
   position: relative;
-  padding: 0 0 22px 0;
+  padding: 0 0 21px 0;
   margin-bottom: 18px;
   display: flex;
   justify-content: space-between;
+}
+
+@media (min-width: $tablet-width) {
+  .footer__header {
+    padding-bottom: 10px;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .footer__header {
     flex-direction: column;
     width: 318px;
+    padding-bottom: 10px;
   }
 }
 
@@ -57,27 +65,41 @@
   }
 }
 
+.footer__logo-link {
+  margin-top: 2.5px;
+  display: block;
+}
+
+@media (min-width: $desktop-width) {
+  .footer__logo-link {
+    margin-bottom: 6px;
+  }
+}
+
+
 .footer__list {
   grid-area: list;
   @include list-reset;
   display: flex;
   flex-direction: column;
-  gap: 25px;
-  margin-bottom: 23px;
+  gap: 19px;
+  margin-bottom: 17px;
 }
 
 @media (min-width: $tablet-width) {
   .footer__list {
     display: flex;
     flex-direction: row;
-    gap: 25px;
-    margin-bottom: 23px;
+    gap: 52px;
+    margin-bottom: 6px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .footer__list {
-    justify-content: space-between;
+    justify-content: start;
+    margin-top: 12px;
+    gap: 47px;
   }
 }
 
@@ -87,18 +109,24 @@
 
 @media (min-width: $tablet-width) {
   .footer__items {
-    width: 223px;
+    width: 200px;
     justify-content: space-between;
     gap: 30px;
   }
 }
 
+@media (min-width: $desktop-width) {
+  .footer__items {
+    width: 300px;
+  }
+}
+
 .footer__items-title {
-  margin: 0 0 25px 0;
+  margin: 0 0 20px 0;
   font-size: 14px;
   font-weight: 700;
   line-height: 20px;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   color: $basic-violet;
 }
 
@@ -106,8 +134,13 @@
   @include list-reset;
   display: flex;
   flex-direction: column;
-  gap: 27px;
-  margin-bottom: 25px
+  gap: 20px;
+  margin-bottom: 30px;
+
+  &--adress {
+    row-gap: 16px;
+    margin-bottom: 21.5px;
+  }
 }
 
 .footer__link {
@@ -115,7 +148,7 @@
   font-size: 12px;
   font-weight: 500;
   line-height: 16px;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   text-transform: uppercase;
   transition: color 0.3s ease-in-out;
 
@@ -131,9 +164,13 @@
   }
 
   &--academy {
+    padding: 0;
     align-items: center;
     font-size: 12px;
-    color: #bdbdbd;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0;
+    color: $light-grey-b;
     gap: 4px;
   }
 
@@ -152,6 +189,7 @@
 }
 
 .footer__link-icon {
+  margin-top: 1px;
   fill: $basic-violet;
   transition: fill 0.3s ease-in-out;
 }
@@ -167,11 +205,48 @@
 
 .footer__link-icon--academy {
   margin-top: 4px;
-fill: $light-grey-b;
+  fill: $light-grey-b;
+}
+
+@media (min-width: $tablet-width) {
+  .footer__link-icon--academy {
+    margin-top: 2px;
+  }
+}
+
+.footer__link-adress,
+.footer__link-phone {
+  letter-spacing: 0;
+}
+
+@media (min-width: $desktop-width) {
+  .footer__link-adress--to-left {
+    margin-left: -2.5px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .footer__link--lower-adress {
+    margin-left: -5px;
+  }
 }
 
 .footer__bottom {
   grid-area: bottom;
   display: flex;
   justify-content: center;
+}
+
+@media (min-width: $tablet-width) {
+  .footer__bottom {
+    margin-left: 8px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .footer__bottom {
+    margin-top: -19px;
+    margin-left: 0;
+
+  }
 }
