--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -6,14 +6,14 @@
 @media (min-width: $tablet-width) {
   .form__wrapper {
     flex-direction: row;
-    gap: 30px;
+    gap: 35px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .form__wrapper {
     flex-direction: column;
-    gap: 30px;
+    gap: 26px;
   }
 }
 
@@ -26,7 +26,7 @@
 
 @media (min-width: $tablet-width) {
   .form__fieldset {
-    width: 223px;
+    width: 217.5px;
   }
 }
 
@@ -49,6 +49,13 @@
   }
 }
 
+@media (min-width: $desktop-width) {
+  .form__buttons {
+    justify-content: start;
+
+  }
+}
+
 .form__button {
   width: 280px;
 }
@@ -56,5 +63,11 @@
 @media (min-width: $tablet-width) {
   .form__button {
     width: 137px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .form__button {
+    width: 149px;
   }
 }
