--- a/source/styles/blocks/nav.scss
+++ b/source/styles/blocks/nav.scss
@@ -16,7 +16,7 @@
 
 .nav__list {
   @include list-reset;
-  margin: 0 20px 0 -20px;
+  margin: 0 20px auto -20px;
   display: none;
   flex-direction: column;
   align-items: center;
@@ -53,6 +53,7 @@
   .nav__list {
     display: flex;
     margin: 0 auto;
+    margin-left: 2px;
     flex-direction: row;
     justify-content: center;
     opacity: 1;
@@ -62,6 +63,8 @@
 @media (min-width: $desktop-width) {
   .nav__list {
     gap: 20px;
+    width: 96.5%;
+    flex-wrap: wrap;
   }
 }
 
@@ -73,7 +76,6 @@
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: uppercase;
-  // padding: 20px 21px;
   border-bottom: 1px solid #F0EBFF;
 
   &--user {
@@ -106,6 +108,7 @@
   &:hover {
     color: $basic-violet;
   }
+
   &:focus {
     color: $basic-violet;
     outline: none;
@@ -123,9 +126,22 @@
 }
 
 @media (min-width: $tablet-width) {
-  .nav__link {padding: 32px 20px;}
+  .nav__link {
+    padding: 31px 20px;
+
+    &--user {
+      padding-right: 22px;
+    }
+  }
 }
 
+@media (min-width: $desktop-width) {
+  .nav__link {
+    &--user {
+      padding-right: 20px;
+    }
+  }
+}
 
 
 .nav__link-icon {
@@ -133,8 +149,8 @@
   transition: fill 0.3s ease-in-out;
 }
 
-
 @media (min-width: $desktop-width) {
+
   .nav__link:hover .nav__link-icon,
   .nav__link:focus .nav__link-icon {
     fill: $basic-violet-hover;
@@ -144,12 +160,6 @@
     fill: $basic-violet;
   }
 }
-
-
-
-
-
-
 
 .nav__link-text {
   display: none;
@@ -163,12 +173,20 @@
 
 .nav-user {
   margin-left: auto;
+  margin-bottom: auto
 }
+
 
 .nav-user__list {
   @include list-reset;
   display: flex;
   justify-content: flex-end;
+}
+
+@media (min-width: $desktop-width) {
+  .nav-user__list {
+    gap: 20px;
+  }
 }
 
 .nav__item--botton {
@@ -177,6 +195,12 @@
   align-items: center;
   justify-content: center;
   margin-right: -20px;
+}
+
+@media (min-width: $tablet-width) {
+  .nav__item--botton {
+    display: none;
+  }
 }
 
 .nav__item--botton:active {
