--- a/source/styles/blocks/select.scss
+++ b/source/styles/blocks/select.scss
@@ -1,16 +1,3 @@
-.catalog__select {
-  width: 280px;
-  min-height: 32px;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #f8f8f8;
-  padding: 0 0 0 4px;
-  margin-left: auto;
-  margin-bottom: 16px;
-}
-
 .select-wrapper {
   display: inline-block;
   position: relative;
@@ -22,7 +9,7 @@
   position: absolute;
   width: 10px;
   height: 6px;
-  background: url("../../images/icons/arrow-down.svg");
+  background: url("../../images/arrow-down.svg");
   background-size: cover;
   background-repeat: no-repeat;
   top: 14px;
@@ -43,7 +30,7 @@
 
 .select__field {
   position: relative;
-  padding: 4px 30px 4px 10px;
+  padding: 4px 25px 4px 15px;
   appearance: none;
   max-width: 165px;
   background-color: $catalog-bg;
