--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -4,6 +4,7 @@
 @import "./global/fonts.scss";
 @import "./global/global.scss";
 
+/* VENDORS */
 @import "../vendor/nouislider.scss";
 
 /* BLOCKS */
@@ -31,11 +32,3 @@
 @import "./blocks/map.scss";
 @import "./blocks/social.scss";
 @import "./blocks/endless-line.scss";
-
-
-
-
-
-
-
-
