--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -32,7 +32,7 @@
 .footer__header {
   grid-area: header;
   position: relative;
-  padding: 0 0 21px 0;
+  padding: 0 0 21px;
   margin-bottom: 18px;
   display: flex;
   justify-content: space-between;
@@ -75,7 +75,6 @@
     margin-bottom: 6px;
   }
 }
-
 
 .footer__list {
   grid-area: list;
@@ -122,7 +121,7 @@
 }
 
 .footer__items-title {
-  margin: 0 0 20px 0;
+  margin: 0 0 20px;
   font-size: 14px;
   font-weight: 700;
   line-height: 20px;
@@ -247,6 +246,5 @@
   .footer__bottom {
     margin-top: -19px;
     margin-left: 0;
-
   }
 }
