--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,10 +1,9 @@
 .header {
   position: relative;
-  color: #333333;
+  color: $dark-color;
   max-width: 320px;
   min-height: 60px;
   margin: 0 auto;
-
 }
 
 @media (min-width: $tablet-width) {
