--- a/source/styles/blocks/price-filter.scss
+++ b/source/styles/blocks/price-filter.scss
@@ -23,9 +23,8 @@
 
   &--milk,
   &--country {
-  margin-bottom: 20px;
+    margin-bottom: 19.8px;
   }
-
 }
 
 .price-filter__inputs {
@@ -55,10 +54,10 @@
   width: 118px;
   height: 40px;
   text-align: center;
-  padding: 8px 10px 8px 10px;
+  padding: 8px 10px;
   border: 2px solid $basic-violet;
   border-radius: 4px;
-outline: none;
+  outline: none;
 }
 
 @media (min-width: $tablet-width) {
