--- a/source/styles/blocks/price-filter.scss
+++ b/source/styles/blocks/price-filter.scss
@@ -79,7 +79,7 @@
 .price-filter__inputs-dash {
   width: 8px;
   height: 2px;
-  background: #bdbdbd;
+  background: $light-grey-b;
 }
 
 .price-filter__list {
