--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,6 +1,6 @@
 .button {
   height: 40px;
-  padding: 8px 20px 8px 20px;
+  padding: 8px 20px;
   border-radius: 4px;
   background-color: $basic-violet;
   color: $default-white;
