--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -9,7 +9,7 @@
   display: grid;
   grid-template-areas:
     "title"
-    "description"
+    "descr"
     "form"
     "product";
 }
@@ -27,7 +27,7 @@
     padding: 100px 40px 0;
     grid-template-areas:
       "title title"
-      "description description"
+      "descr descr"
       "form product";
     column-gap: 29px;
   }
@@ -49,7 +49,7 @@
 .catalog__description {
   margin: 0;
   margin-bottom: 20px;
-  grid-area: description;
+  grid-area: descr;
   text-align: center;
   font-size: 24px;
   font-weight: 700;
