--- a/source/styles/blocks/burger-button.scss
+++ b/source/styles/blocks/burger-button.scss
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  outline: none;
   transition: opacity 0.3s ease-in-out;
 
   &::before {
