--- a/source/styles/blocks/checkbox.scss
+++ b/source/styles/blocks/checkbox.scss
@@ -1,10 +1,14 @@
 .checkbox-inputs {
-  margin-bottom: 9px;
+  margin-bottom: 15px;
+}
+
+.checkbox__input {
+  width: 0;
 }
 
 @media (min-width: $tablet-width) {
   .checkbox-inputs {
-    margin-bottom: 19px;
+    margin-bottom: 25px;
   }
 }
 
@@ -15,7 +19,7 @@
 }
 
 .checkbox-list {
-  row-gap: 13.5px;
+  row-gap: 20px;
 }
 
 .checkbox {
@@ -31,10 +35,6 @@
   height: 24px;
   cursor: pointer;
   position: relative;
-}
-
-.checkbox__input {
-  display: none;
 }
 
 .checkbox__input:checked + .checkbox__slider {
@@ -64,7 +64,7 @@
   height: 20px;
   border-radius: 50%;
   left: 0;
-  top: 1px;
+  top: 0;
   background-color: $default-white;
   background-repeat: no-repeat;
   background-position: center;
@@ -78,11 +78,16 @@
 .checkbox:focus .checkbox__slider {
   background-color: rgba(120, 89, 207, 0.25);
   border: 2px solid $basic-violet-hover;
+}
+
+.checkbox__input:focus + .checkbox__slider {
   outline: none;
+  background-color: rgba(120, 89, 207, 0.25);
+  border: 2px solid $basic-violet-hover;
 }
 
 .checkbox__input:disabled:checked + .checkbox__slider .checkbox__knob {
-  background: $light-grey-b;
+  background-color: $light-grey-b;
 }
 
 .checkbox__input:disabled + .checkbox__slider {
