--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -32,6 +32,7 @@
   letter-spacing: 0.04em;
   text-align: center;
   margin-bottom: 4px;
+  // padding: 0 20px;
 }
 
 .features__description {
@@ -229,6 +230,10 @@
     text-align: start;
     margin-top: -17px;
     margin-left: 2px;
+
+    &--fit {
+      margin-top: -13px;
+    }
   }
 }
 
