--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -37,13 +37,20 @@
   gap: 22px;
   align-items: center;
   pointer-events: none;
+  margin-bottom: auto;
+  padding-top: 12px;
+}
+
+@media (min-width: $tablet-width) {
+  .header__logo {
+    gap: 20px;
+    padding-top: 22px;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .header__logo {
     gap: 20px;
-    margin-bottom: auto;
-    padding-top: 22px;
   }
 }
 
