--- a/source/styles/blocks/nav.scss
+++ b/source/styles/blocks/nav.scss
@@ -55,6 +55,7 @@
     margin-left: 2px;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     opacity: 1;
   }
 }
@@ -63,7 +64,6 @@
   .nav__list {
     gap: 20px;
     width: 96.5%;
-    flex-wrap: wrap;
   }
 }
 
@@ -100,6 +100,7 @@
   @include link-style;
   color: inherit;
   display: flex;
+  flex-direction: column;
   gap: 9px;
   padding: 22px;
 
@@ -126,9 +127,10 @@
 @media (min-width: $tablet-width) {
   .nav__link {
     padding: 31px 20px;
+    flex-direction: row;
 
     &--user {
-      padding-right: 22px;
+      padding-right: 22.5px;
     }
   }
 }
@@ -185,7 +187,7 @@
   }
 }
 
-.nav__item--botton {
+.nav__item--button {
   width: 60px;
   display: flex;
   align-items: center;
@@ -194,11 +196,12 @@
 }
 
 @media (min-width: $tablet-width) {
-  .nav__item--botton {
+  .nav__item--button {
     display: none;
   }
 }
 
-.nav__item--botton:active {
+.nav__item--button:active,
+.nav__item--button:focus-within {
   background-color: $basic-violet-ligth;
 }
